<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/screenBackground">

    <EditText
            android:layout_width="324dp"
            android:layout_height="0dp"
            android:inputType="number"
            android:text="@string/txt_0"
            android:hint="@string/txt_hint"
            android:ems="10"
            tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="19dp" android:id="@+id/editText"
            tools:ignore="MissingConstraints"/>
    <Button
            android:text="@string/btn_AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText"
    />
    <Button
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/button13"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.705"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Button
            android:text="@string/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toStartOf="@+id/button2"
    />
    <Button
            android:text="@string/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="@+id/button4"
    />
    <Button
            android:text="@string/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/button10" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/button4"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
    />
    <Button
            android:text="@string/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintEnd_toStartOf="@+id/button11"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/button5" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.513"/>
    <Button
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintStart_toStartOf="@+id/button5"/>
    <Button
            android:text="@string/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintEnd_toStartOf="@+id/button12"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/button8" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.513"/>
    <Button
            android:text="@string/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button10" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button13" app:layout_constraintEnd_toEndOf="@+id/button13"
    />
    <Button
            android:text="@string/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button10" app:layout_constraintEnd_toEndOf="@+id/button10"
    />
    <Button
            android:text="@string/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button12" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button11" app:layout_constraintEnd_toEndOf="@+id/button11"
    />
    <Button
            android:text="@string/btn_dot"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:id="@+id/button13"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="@+id/editText" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="+"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button14" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button8" app:layout_constraintStart_toStartOf="@+id/button8"
    />
    <Button
            android:text="@string/btn_substract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button15" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button9" app:layout_constraintEnd_toStartOf="@+id/button16"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/button14" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.567"/>
    <Button
            android:text="@string/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button16" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button12" app:layout_constraintEnd_toEndOf="@+id/button12"
    />
    <Button
            android:text="@string/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button17" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button14" app:layout_constraintStart_toStartOf="@+id/button14"
    />
    <Button
            android:text="@string/btn_equal"
            android:layout_width="205dp"
            android:layout_height="49dp"
            android:id="@+id/button18" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button15" app:layout_constraintStart_toEndOf="@+id/button17"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="@+id/button16"/>

</android.support.constraint.ConstraintLayout>